fixed bottom being covered on vessel location in wizard gps

--- a/scss/test.scss
+++ b/scss/test.scss
@@ -410,6 +410,10 @@ html {
 }
 
 .vessel-location {
+  .note {
+    padding-bottom: 60px;
+  }
+
   .coordinates-view,
   .city-view {
     line-height: 1.4;
